--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -27,9 +27,9 @@
     var objectpeer = {
         host: 'voicechatduy.herokuapp.com',
         port: 9000,
-        path: '/voicechat'
+        path: '/peerjs/voicechat'
       }
-      
+
     var getUserMedia = (function () {
       if (navigator.getUserMedia) {
         return navigator.getUserMedia.bind(navigator)
