--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,9 +25,9 @@
     //var getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
     //console.log(getUserMedia);
     var objectpeer = {
-        host: 'voicechatduy.herokuapp.com',
+        host: 'voicechatserver9000.herokuapp.com',
         port: 9000,
-        path: '/peerjs/voicechat'
+        path: '/voicechat'
       }
 
     var getUserMedia = (function () {
